[0.2.0] Replaced bongo to mongodm

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,6 @@
 PORT: 8080 # API port
+MONGODB_HOST: localhost # MongoDB host IP
+MONGODB_NAME: unio # MongoDB database name
+MONGODB_USERNAME: unio # MongoDB access username (if exists)
+MONGODB_PASSWORD: unio # MongoDB access password (if exists)
+MONGODB_SOURCE: admin # MongoDB access admin (if username and password exists)
